// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connect 1`] = `Object {}`;

exports[`connect via set/get 1`] = `
Object {
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`connect via set/get 2`] = `
Object {
  "changes": Array [],
  "connected": true,
  "d": [Function],
  "dispose": Array [
    [Function],
  ],
  "get": [Function],
  "getChanges": [Function],
  "getPatches": [Function],
  "id": undefined,
  "isNested": [Function],
  "log": [Function],
  "nestedSet": false,
  "nestedState": undefined,
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "patches": Array [],
  "set": [Function],
  "state": Object {},
  "wrap": [Function],
  "wrappedFn": [Function],
}
`;

exports[`connect via set/get 3`] = `
Object {
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`connect via set/get 4`] = `
Object {
  "changes": Array [],
  "connected": true,
  "d": [Function],
  "dispose": Array [
    [Function],
  ],
  "get": [Function],
  "getChanges": [Function],
  "getPatches": [Function],
  "id": undefined,
  "isNested": [Function],
  "log": [Function],
  "nestedSet": false,
  "nestedState": undefined,
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "patches": Array [],
  "set": [Function],
  "state": Object {},
  "wrap": [Function],
  "wrappedFn": [Function],
}
`;

exports[`connect with pending function state 1`] = `
Object {
  "some": "state",
}
`;

exports[`connect with pending object state 1`] = `
Object {
  "some": "state",
}
`;

exports[`debugStore 1`] = `
Object {
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`debugStore 2`] = `
Object {
  "debug": true,
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`debugStore 3`] = `
Object {
  "debug": false,
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`get with action 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`getStore 1`] = `
Object {
  "dispose": Array [],
  "get": [Function],
  "id": undefined,
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`getStore named 1`] = `
Object {
  "dispose": Array [],
  "get": [Function],
  "id": "store1",
  "log": [Function],
  "notify": Object {
    "plugin": Object {
      "dispose": [Function],
      "middleware": [Function],
    },
    "subscribe": [Function],
    "subscribers": Map {},
  },
  "pending": Array [],
  "set": [Function],
}
`;

exports[`getStore named 2`] = `Object {}`;

exports[`nested set works 1`] = `
Object {
  "lower": "value",
  "lower2": "value2",
  "lower3": "value3",
  "lower4": "value4",
  "upper": "value",
  "upper2": "value2",
  "upper3": "value3",
  "upper4": "value4",
}
`;

exports[`nested set works with debug 1`] = `
Object {
  "lower": "value",
  "lower2": "value2",
  "lower3": "value3",
  "lower4": "value4",
  "upper": "value",
  "upper2": "value2",
  "upper3": "value3",
  "upper4": "value4",
}
`;

exports[`register on connected store 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register on connected store with init as function 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"some\\": \\"state\\",
+ }"
`;

exports[`register with plugin, no state and set 1`] = `Object {}`;

exports[`register with plugin, no state and set 2`] = `
Object {
  "some": "state",
}
`;

exports[`register with plugin, state function 1`] = `
Object {
  "action": [Function],
  "some": "state",
  "thing": 1,
}
`;

exports[`register with store id as first parameter 1`] = `
Object {
  "field": "value",
}
`;

exports[`register with store id as first parameter 2`] = `
Object {
  "field": "value2",
}
`;

exports[`set action 1`] = `
Object {
  "some": "state",
}
`;
